# python_tests

./: .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
allure-results/: 01d5f67d-8de9-49ec-8b4b-2a97a42bdb9f-result.json  0365b04c-6f1f-4ff1-adfa-998867cb19cd-result.json  0a3da500-f735-4399-b670-da3e744ab237-container.json  10e8d097-d1ee-4fa8-a2e0-378e83017223-container.json  138217eb-eeb7-43b6-841d-e50de993df3f-result.json  140bf710-16af-4825-87cd-9e7e8442412b-container.json  16837a0d-d3a5-4458-8362-f238a2e0fb73-container.json  24ee809b-0c1c-4234-aa6c-81450b860718-container.json  27b6b92e-d287-4579-bc57-ddbda4e61317-container.json  2af027e0-d966-4965-a991-d53e7c10f845-result.json  387528f5-3339-4052-93c6-b52ea075ccda-result.json  3aea0f45-912c-4cc1-aa4d-bc84c3989b1e-container.json  3b09f4b1-a5e7-4899-b4a5-7665bf5e00aa-result.json  3f98b41d-47a1-4728-9dc9-6557598e8ae3-result.json  4083dff0-a743-4fca-9a7f-c762ac41848d-result.json  40cd630b-2903-4f5a-a3e1-c3c4cdf1d379-container.json  4471adbe-35f0-490b-a8ec-63a85904f5e3-container.json  45885aa1-9ca9-4246-89fc-3f5e8b53536d-container.json  462778b6-0f1d-4238-b3ac-6f68ea772de2-container.json  4bfb6421-15bc-4818-92ff-133fbcf1288b-container.json  4c8d5021-cfeb-45e5-abd9-1e3eab37dc4f-container.json  4ca51ab7-8158-4a03-b3f6-feff12747e76-result.json  4d3d7c5b-22e5-4e2a-b04b-69867907f81b-container.json  512e4053-d04c-4ed5-b847-f2c0cafc3a3a-result.json  564f7d2d-da0b-4f30-be76-e98ee31a13aa-container.json  5bd49475-352b-47d0-8c72-36b224a6a6b6-result.json  (+44 more)
(+11 files in other folders)
